--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <div class="apresentacao__links">
             <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-            <a class="apresentacao__links__navegacao" href="http://instagram.com/flaavi">
+            <a class="apresentacao__links__navegacao" href="http://instagram.com/flaavi_">
                 <img src="./assets/instagram.png">
                 Instagram</a>
             <a class="apresentacao__links__navegacao" href="http//github.com/flaavi">
